# tc375_bsp

./: .clangd  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  README.md  clang-tricore-tc162-none-eabi.cmake  files.cmake  run_cmake.sh  shared_main.c  tc37x_bsp_llvm_version.txt
.build_LITEKIT_TC375_V2_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  tc375_bsp_example.elf  tc375_bsp_example.hex  tc375_bsp_example.map
.build_LITEKIT_TC375_V2_debug/.cache/clangd/index/: IfxAsclin_bf.h.44C151A2E3B95FE5.idx  IfxAsclin_reg.h.025796BEDDA3B60A.idx  IfxAsclin_regdef.h.F7CD80B5B199C1A0.idx  IfxCan_bf.h.72DDD526F4CA13F5.idx  IfxCan_reg.h.68D8F65F4D444DE3.idx  IfxCan_regdef.h.5F989A4A60E5AF67.idx  IfxCbs_bf.h.2170AB5BFB4DE4AC.idx  IfxCbs_reg.h.7FB3CEEBA0DB4F96.idx  IfxCbs_regdef.h.6377523B01E7C8CC.idx  IfxCcu6_bf.h.9E3CAF0F9332DBCE.idx  IfxCcu6_reg.h.6BB1427259289A7C.idx  IfxCcu6_regdef.h.170FC41675F54163.idx  IfxConverter_bf.h.1FC970B253E1C38A.idx  IfxConverter_reg.h.C942443E38417697.idx  IfxConverter_regdef.h.039AFDBE83335FA0.idx  IfxCpu_bf.h.D4BE2A633E80FC73.idx  IfxCpu_reg.h.0DEF461C5CEEDCD2.idx  IfxCpu_regdef.h.A9058B929ECAE36F.idx  IfxDam_bf.h.A646F5595E1D77CE.idx  IfxDam_reg.h.A6BCC5968DF5035C.idx  IfxDam_regdef.h.5870DF290CA3C4C4.idx  IfxDma_bf.h.F398BC0436F0C8B3.idx  IfxDma_reg.h.A34900698E7A9B8C.idx  IfxDma_regdef.h.00C8BF86148E0C25.idx  IfxDmu_bf.h.E64F67B3941FFAEE.idx  IfxDmu_reg.h.26C7C6F008F9FEEA.idx  IfxDmu_regdef.h.D65443A3BDA0C85C.idx  IfxDom_bf.h.00A1DBCB848A9B3B.idx  IfxDom_reg.h.C04A1AC4656ED743.idx  IfxDom_regdef.h.528BE060A879C4F3.idx  IfxEdsadc_bf.h.C72D07BF0E4A0401.idx  IfxEdsadc_reg.h.2926BCE4542E6B4E.idx  IfxEdsadc_regdef.h.DD890D41C091CBD5.idx  IfxEray_bf.h.E201513F2D20C973.idx  IfxEray_reg.h.4691436991577E05.idx  IfxEray_regdef.h.40EA5E9B3BF74D6C.idx  IfxEvadc_bf.h.B19B53D4532698B0.idx  IfxEvadc_reg.h.608D2DC9A54ADA2D.idx  IfxEvadc_regdef.h.0D6B29097BC722D6.idx  IfxFce_bf.h.9609C13C0418AF31.idx  (+103 more)
.nvim/: lsp.lua
Configurations/: Configuration.h
Ethernet/lwip/port/include/: Ifx_Lwip.h
UART/: UART_Logging.c  UART_Logging.h
bsp/: bsp.h  typedefs.h
bsp/board/: bsp_board.c  bsp_board.h
bsp/board/board_litekit_TC375_V2/: board.c  board.h  board_spec.h  board_types.h  board_version.txt
bsp/isr/: bsp_isr.c  bsp_isr.h  bsp_isr_vector_table.c  bsp_traps_tc3.c
bsp/uc/: bsp_uc.c  bsp_uc.h  bsp_uc_regdefs.h
bsp/uc/uc_tc37/: uc_tc37.c  uc_tc37.h  uc_tc37_spec.h  uc_tc37_types.h  uc_version.txt
bsp/uc/uc_tc37/TC37xPD_RegCHeaders/_Reg/: IfxAsclin_bf.h  IfxAsclin_reg.h  IfxAsclin_regdef.h  IfxCan_bf.h  IfxCan_reg.h  IfxCan_regdef.h  IfxCbs_bf.h  IfxCbs_reg.h  IfxCbs_regdef.h  IfxCcu6_bf.h  IfxCcu6_reg.h  IfxCcu6_regdef.h  IfxConverter_bf.h  IfxConverter_reg.h  IfxConverter_regdef.h  IfxCpu_bf.h  IfxCpu_reg.h  IfxCpu_regdef.h  IfxDam_bf.h  IfxDam_reg.h  IfxDam_regdef.h  IfxDma_bf.h  IfxDma_reg.h  IfxDma_regdef.h  IfxDmu_bf.h  IfxDmu_reg.h  IfxDmu_regdef.h  IfxDom_bf.h  IfxDom_reg.h  IfxDom_regdef.h  IfxEdsadc_bf.h  IfxEdsadc_reg.h  IfxEdsadc_regdef.h  IfxEray_bf.h  IfxEray_reg.h  IfxEray_regdef.h  IfxEvadc_bf.h  IfxEvadc_reg.h  IfxEvadc_regdef.h  (+80 more)
cmake/: tricore-llvm-toolchain.cmake
components/: compat.h  component.h  ethernet.h  serial.h  timer.h
crt0/: tc3x_crt0.S  uc_tc37_bmhd.c
driver/: adc.c  adc.h  can.c  can.h  common_idx.h  compontent.h  ethernet.c  ethernet.h  flash_memory.c  flash_memory.h  gpio.c  gpio.h  serial.c  serial.h  timer.c  timer.h
driver/lwip/port/src/: Ifx_Lwip.c  Ifx_Lwip_stub.c
driver_imp/: adc.c  can.c  ethernet.c  flash.c  gpio.c  pwm.c  serial.c  timer.c
illd/: Configuration.h  ConfigurationIsr.h  Ifx_Cfg.h  Ifx_Cfg_Ssw.h  illd.h  illd_uc.c  illd_uc.h
ld/: tc37xA_2cores_memory.ld  tc37xA_memory.ld  tc37x_2cores_bsp_example_llvm.ld  tc37x_bsp_example_llvm.ld
lib/DPS/lib/c_vector/: .gitignore  Makefile  c_vector.c  c_vector.h
lib/DPS/src/common/: common.h
lib/DPS/src/slave/: dps_slave.c  dps_slave.h
lib/DPS/tests/test_utility/: test_utility.c  test_utility.h
lib/board_dbc/dbc/: README.md  can2.dbc  can2.md  can3.dbc  can3.md
lib/raceup_board/components/: adc.h  can.h  component.h  flash_memory.h  gpio.h  interrupt.h  trap.h
lib/tv_2025/: ControlSystems.c  ControlSystems.h  ControlSystems_data.c  ControlSystems_private.h  ControlSystems_types.h  complex_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h
machine/: wdtcon.c
src/: shared_main.c  src.h
src/cores/: cores.h
src/cores/core_0/: core_0.c  core_0.h
src/cores/core_0/feature/: feature.c  feature.h
src/cores/core_1/: core_1.c  core_1.h
src/cores/core_1/feature/: feature.c  feature.h
src/cores/core_2/: core_2.c  core_2.h
src/cores/core_2/feature/: feature.c  feature.h
src/cores/core_utility/: core_utility.h
src/cores/core_utility/alive_blink/: alive_blink.c  alive_blink.h
src/cores/core_utility/alive_core/: alive_core.h
src/cores/core_utility/as_node/: as_node.c  as_node.h
src/cores/core_utility/car_speed/: car_speed.c  car_speed.h
src/cores/core_utility/control_frequency/: control_frequency.c  control_frequency.h
src/cores/core_utility/core_status/: core_status.c  core_status.h
src/cores/core_utility/driver_input_reader/: driver_input_reader.c  driver_input_reader.h
src/cores/core_utility/emergency_module/: emergency_module.c  emergency_module.h
src/cores/core_utility/errno_trace/: errno_trace.c  errno_trace.h  error_types.txt
src/cores/core_utility/imu/: imu.c  imu.h
src/cores/core_utility/log/: log.c  log.h  log_obj_types.h
src/cores/core_utility/mission_reader/: mission_reader.c  mission_reader.h
src/cores/core_utility/rtd_assi_sound/: rtd_assi_sound.c  rtd_assi_sound.h
src/cores/core_utility/running_status/: running_status.c  running_status.h
src/cores/core_utility/shared_memory/: shared_memory.c  shared_memory.h
src/cores/core_utility/shared_message/: shared_message.c  shared_message.h
src/cores/core_utility/system_settings/: system_settings.c  system_settings.h
(+48 files in other folders)
